syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

package moto_health.accident_reporting;

message AccidentReportDto {
	int32 reporterTelegramUserId = 1;
	string reporterPhoneNumber = 2;
	google.protobuf.Timestamp reportedAtUtc = 3;
	string address = 4;
	string participants = 5;
	string victims = 6;
}